5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4414/executions/1635_2704.log
== TEST (2019-04-08 15:46:45) 
-- CODE:
n=float(input("nota:"))
x=n+10/100
if(n=>6)
   
-- ERROR:
File "XXXX", line 3
    if(n=>6)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:46:56) 
-- CODE:
n=float(input("nota:"))
x=n+10/100
if(n=>6):
   
-- ERROR:
File "XXXX", line 3
    if(n=>6):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:49:17) 
-- CODE:
n=float(input("nota:"))
x=n+10/100

   
-- ERROR:
File "XXXX", line 3
    if(n=>6):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 09:36:56) 
-- CODE:
n=float(input("nota:"))
S=n*10/100
if(n>=6):
	print("S")
else:
	print("N")
-- OUTPUT:
N
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 09:41:28) 
-- CODE:
n=float(input("nota:"))
S=n*10/100
if(n>=6):
	print("S")
	print(S)
else:
	print("N")
	print(n)
-- OUTPUT:
N
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 09:44:23) 
-- CODE:
n=float(input("nota:"))
S=(n*10/100)+ n
if(n>=6):
	print("S")
	print(S)
else:
	print("N")
	print(n)
-- OUTPUT:
N
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 09:44:23) 
-- CODE:
n=float(input("nota:"))
S=(n*10/100)+ n
if(n>=6):
	print("S")
	print(S)
else:
	print("N")
	print(n)
-- OUTPUT:
N
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 09:49:14) 
-- CODE:
n=float(input("nota:"))
S=(n*10/100)+ n
if(n>=6):
	print("S")
	print(S)
else:
	print("N")
	print(n)
-- OUTPUT:
N
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 09:49:34) 
-- CODE:
n=float(input("nota:"))
S=(n*10/100)+ n
if(n>=6):
	print("S")
	print(S)
else:
	print("N")
	print(n)
-- EXECUTION TIME:
0.145331
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
N
5.0
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
S
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
N
4.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 09:49:40) 
-- CODE:
n=float(input("nota:"))
S=(n*10/100)+ n
if(n>=6):
	print("S")
	print(S)
else:
	print("N")
	print(n)
-- OUTPUT:
N
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 09:53:35) 
-- CODE:
n=float(input("nota:"))
S=(n*10/100)+ n
b = float(input())
if (b == 's'):
	print(S)
else:
	print(n)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    b = float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 09:56:08) 
-- CODE:
n=float(input("nota:"))
S=(n*10/100)+ n
b = float(input())
1 = s
0 = n
if (b == 1):
	print(S)
else:
	print(n)
	
	
-- ERROR:
File "XXXX", line 4
    1 = s
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 09:56:44) 
-- CODE:
n=float(input("nota:"))
S=(n*10/100)+ n
b = float(input())
s = 1
n = 0
if (b == 1):
	print(S)
else:
	print(n)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    b = float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 09:59:09) 
-- CODE:
n=float(input("nota:"))
S=(n*10/100)+ n
b =input("bonificação:")
if (b == "s"):
	print(S)
else:
	print(n)
	
	
-- EXECUTION TIME:
0.155141
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.0
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.0
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 09:59:15) 
-- CODE:
n=float(input("nota:"))
S=(n*10/100)+ n
b =input("bonificação:")
if (b == "s"):
	print(S)
else:
	print(n)
	
	
-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 09:59:36) 
-- CODE:
n=float(input("nota:"))
S=(n*10/100)+ n
b =input("bonificação:")
if (b == s):
	print(S)
else:
	print(n)
	
	
-- EXECUTION TIME:
0.155906
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2704/main.py", line 4, in <module>
    if (b == s):
NameError: name 's' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 09:59:38) 
-- CODE:
n=float(input("nota:"))
S=(n*10/100)+ n
b =input("bonificação:")
if (b == s):
	print(S)
else:
	print(n)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (b == s):
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 09:59:59) 
-- CODE:
n=float(input("nota:"))
S=(n*10/100)+ n
b =input("bonificao:")
if (b == s):
	print(S)
else:
	print(n)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (b == s):
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 10:00:57) 
-- CODE:
n=float(input("nota:"))
S=(n*10/100)+ n
b =input("bonificao:")
s = 1
n = 0
if (b == s):
	print(S)
else:
	print(n)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (b == s):
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 10:02:09) 
-- CODE:
nota=float(input("nota:"))
S=(nota*10/100)+ nota
b =input("bonificao:")
s = 1
n = 0
if (b == s):
	print(S)
else:
	print(n)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (b == s):
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 10:02:50) 
-- CODE:
nota=float(input("nota:"))
 k=(nota*10/100)+ nota
b =input("bonificao:")
s = 1
n = 0
if (b == s):
	print(k)
else:
	print(n)
	
	
-- ERROR:
File "XXXX", line 2
    k=(nota*10/100)+ nota
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 10:03:29) 
-- CODE:
nota=float(input("nota:"))
k=(nota*10/100)+ nota
b =input("bonificao:")
s = 1
n = 0
if (b == s):
	print(k)
else:
	print(n)
	
	
-- ERROR:
File "XXXX", line 2
    k=(nota*10/100)+ nota
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 10:03:50) 
-- CODE:
nota=float(input("nota:"))
k=(nota*10/100)+ nota
b =input("bonificao:")
s = 1
n = 0
if (b == s):
	print(k)
else:
	print(nota)
	
	
-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 10:04:05) 
-- CODE:
nota=float(input("nota:"))
k=(nota*10/100)+ nota
b =input("bonificao:")
s = 1
n = 0
if (b == n):
	print(k)
else:
	print(nota)
	
	
-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 10:04:50) 
-- CODE:
nota=float(input("nota:"))
k=(nota*10/100)+ nota
s = 1
n = 0
b =input("bonificao:")
if (b == s):
	print(k)
else:
	print(nota)
	
	
-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 10:05:26) 
-- CODE:
nota=float(input("nota:"))
k=(nota*10/100)+ nota
s = 1
n = 0
b =input("bonificao:")
if (b == n):
	print(k)
else:
	print(nota)
	
	
-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 10:06:53) 
-- CODE:
nota=float(input("nota:"))
k=(nota*10/100)+ nota
s = True
n = False
b =input("bonificao:")
if (b == s):
	print(k)
else:
	print(nota)
	
	
-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 10:07:21) 
-- CODE:
nota=float(input("nota:"))
k=(nota*10/100)+ nota
s = True
n = False
b =input("bonificao:")
if (b == True):
	print(k)
else:
	print(nota)
	
	
-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 10:08:46) 
-- CODE:
nota=float(input("nota:"))
k=(nota*10/100)+ nota
b =input("bonificao:")
if (b == s):
	print(k)
else:
	print(nota)
	
	
-- EXECUTION TIME:
0.150763
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2704/main.py", line 4, in <module>
    if (b == s):
NameError: name 's' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 10:08:49) 
-- CODE:
nota=float(input("nota:"))
k=(nota*10/100)+ nota
b =input("bonificao:")
if (b == s):
	print(k)
else:
	print(nota)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (b == s):
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 10:10:30) 
-- CODE:
nota=float(input("nota:"))
k=(nota*10/100)+ nota
b =input("bonificao:")
if (b == s):
	print(k)
else:
	print(n)
	
	
-- EXECUTION TIME:
0.16502
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2704/main.py", line 4, in <module>
    if (b == s):
NameError: name 's' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 10:10:33) 
-- CODE:
nota=float(input("nota:"))
k=(nota*10/100)+ nota
b =input("bonificao:")
if (b == s):
	print(k)
else:
	print(n)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (b == s):
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 10:11:52) 
-- CODE:
nota=float(input("nota:"))
k=(nota*10/100)+ nota
b =input("bonificao:")
s=k
N=n
if (b == ):
	print(k)
else:
	print(n)
	
	
-- ERROR:
File "XXXX", line 6
    if (b == ):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 10:13:00) 
-- CODE:
nota=float(input("nota:"))
k=(nota*10/100)+ nota
b =input("bonificao:")
s=k
N=nota
if (b == s):
	print(k)
else:
	print(nota)
	
	
-- EXECUTION TIME:
0.176595
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.0
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.0
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 10:13:05) 
-- CODE:
nota=float(input("nota:"))
k=(nota*10/100)+ nota
b =input("bonificao:")
s=k
N=nota
if (b == s):
	print(k)
else:
	print(nota)
	
	
-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 10:14:43) 
-- CODE:
nota=float(input("nota:"))
k=(nota*10/100)+ nota
b =input("bonificao:")
s==k
N==nota
if (b == s):
	print(k)
else:
	print(N)
	
	
-- EXECUTION TIME:
0.233269
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2704/main.py", line 4, in <module>
    s==k
NameError: name 's' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 10:14:46) 
-- CODE:
nota=float(input("nota:"))
k=(nota*10/100)+ nota
b =input("bonificao:")
s==k
N==nota
if (b == s):
	print(k)
else:
	print(N)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    s==k
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 10:15:03) 
-- CODE:
nota=float(input("nota:"))
k=(nota*10/100)+ nota
b =input("bonificao:")
s=k
N=nota
if (b == s):
	print(k)
else:
	print(N)
	
	
-- EXECUTION TIME:
0.219954
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.0
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.0
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 10:15:08) 
-- CODE:
nota=float(input("nota:"))
k=(nota*10/100)+ nota
b =input("bonificao:")
s=k
N=nota
if (b == s):
	print(k)
else:
	print(N)
	
	
-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 10:16:34) 
-- CODE:
nota=float(input("nota:"))
k=(nota*10/100)+ nota
b =input("bonificao:")
s=k
N=nota
if (b == s):
	print(k)
else:
	print(N)
	
	
-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:25:50) 
-- CODE:
nota=float(input("nota:"))
b=input("s ou n :")

if(b=="s"):
	notafinal= nota + nota*0.10
	print(notafinal)
else:
	notafinal=nota
	print(notafinal)
	
-- EXECUTION TIME:
0.17582
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.0
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.0
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:25:53) 
-- CODE:
nota=float(input("nota:"))
b=input("s ou n :")

if(b=="s"):
	notafinal= nota + nota*0.10
	print(notafinal)
else:
	notafinal=nota
	print(notafinal)
	
-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:26:12) 
-- CODE:
nota=float(input("nota:"))
b=input("s ou n :")

if(b=="s"):
	notafinal= nota + nota*0.10
	print(notafinal)
else:
	notafinal=nota
	print(notafinal)
	
-- EXECUTION TIME:
0.144351
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.0
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.0
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:27:36) 
-- CODE:
nota=float(input("nota:"))
bonificacao=input("s ou n :")

if(b=="s"):
	bonificacao= nota + nota*0.10
	print(notafinal)
else:
	notafinal=nota
	print(notafinal)
	
-- EXECUTION TIME:
0.135331
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2704/main.py", line 4, in <module>
    if(b=="s"):
NameError: name 'b' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:27:40) 
-- CODE:
nota=float(input("nota:"))
bonificacao=input("s ou n :")

if(b=="s"):
	bonificacao= nota + nota*0.10
	print(notafinal)
else:
	notafinal=nota
	print(notafinal)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(b=="s"):
NameError: name 'b' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:28:10) 
-- CODE:
nota=float(input("nota:"))
bonificacao=input("s ou n :")

if(bonificacao=="s"):
	notafinal= nota + nota*0.10
	print(notafinal)
else:
	notafinal=nota
	print(notafinal)
	
-- EXECUTION TIME:
0.166305
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.0
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.0
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:28:42) 
-- CODE:
nota=float(input("nota:"))
bonificacao=input("S ou N :")

if(bonificacao=="S"):
	notafinal= nota + nota*0.10
	print(notafinal)
else:
	notafinal=nota
	print(notafinal)
	
-- EXECUTION TIME:
0.134918
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
